assets/css/blog.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    background-color: #f1f1f1;
}

header button {
    margin-left: 10px;
}


button {
    padding: 10px;
    background-color: #4CAF50;
    color: white;
    border: none;
    cursor: pointer;
    margin-top: auto;
    margin-bottom: auto;
}

button:hover {
    background-color: #7dd181;
}

#posts-container {
    padding: 20px;
    background-color: white;
}

ul {
    list-style-type: none;
    padding: 0;
}

li {
    background-color: #f9f9f9;
    margin: 10px 0;
    padding: 10px;
    border-radius: 5px;
    border: 2px solid black;
}

li h3 {
    border-bottom: 2px solid gray;
}

footer {
    padding: 20px;
    text-align: center;
    background-color: #f1f1f1;
}

